--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 bin
+UML
 
 # Compiled source #
 ###################
@@ -21,3 +22,8 @@ bin
 *.rar
 *.tar
 *.zip
+
+# Text #
+########
+*.docx
+*.pdf
